used jQuery to fix bg on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,7 @@ html {
     line-height: 1.4;
 }
 
-body{
-    background: url("../img/bg.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: 100% 100%;
 
-    overflow: hidden;
-}
 ul {
     padding: 0;
     list-style-type: none;
@@ -668,10 +660,6 @@ textarea {
         height: 94%;
         left: 2%;
         top: 2%;
-    }
-
-    body{
-        background: url("../img/bg_mobile.jpg") no-repeat center center fixed;
     }
 
 }
